# distributed-workflow

./: Cargo.toml  README.md  redocly.yaml
cli-common/: Cargo.toml
cli-common/src/: lib.rs  options.rs
doc/: openapi.yml  spec.md
example/: config.toml  task_job_config.yaml
workflow-control/: Cargo.toml
workflow-controller/: Cargo.toml
workflow-controller/src/: main.rs
workflow-core/: Cargo.toml
workflow-core/src/: error.rs  lib.rs  task_job_desc.rs
workflow-core/src/core/: id.rs  mod.rs  options.rs
workflow-core/src/core/messaging/: mod.rs  rabbit_mq.rs
workflow-core/src/core/states/: mod.rs  postgres.rs  schema.sql  test_data.sql
workflow-core/tests/: postgres_backend_test.rs  rabbitmq_backend_test.rs
workflow-worker/: Cargo.toml
workflow-worker/src/: main.rs
